--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,13 @@
 /*  your css code here. If applicable */
 #yellow{
 	background-color: yellow;
-	border-style:solid;
-	border-width: 1 px;
-	border-color: green;
+	border: 1px solid green;
 }
 #red{
 	background-color: red;
-	border-style:solid;
-	border-width: 1 px;
-	border-color: black;
+	border: 1px solid black;
 }
 #green{
 	background-color: green;
-	border-style:solid;
-	border-width: 1 px;
-	border-color: yellow;
+	border: 1px solid yellow;
 }
